2009-07-01  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_custom_graphs.php, include/fgraph.php,
	  include/functions_fsgraph.php: Small fixes, mostly path related.

2009-06-01  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

	* godmode/reporting/map_builder.php,
	* godmode/reporting/graph_builder.php: Updated translatable period
	* strings to reduce its number and make them more compliant with the
	* rest.

2009-06-30  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

	* operation/agentes/estado_generalagente.php: Changed a string to
	* reuse previous translation.

2009-06-30  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Limit the number of agents in modules per agent
	  charts.

2009-06-30  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Truncate long names for flash charts.

2009-06-30  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Added support for mixing flash/image charts.
	
	* include/functions_fsgraph.php: Use user defined colors in module
	  charts.

2009-06-30  Ramon Novoa  <rnovoa@artica.es>

	* include/FusionCharts,
	  include/FusionCharts/FCF_Column3D.swf,
	  include/FusionCharts/FCF_Pie3D.swf,
	  include/FusionCharts/FusionCharts.js,
	  include/FusionCharts/FCF_MSLine.swf,
	  include/FusionCharts/FusionCharts_Gen.php,
	  include/FusionCharts/FCF_StackedArea2D.swf,
	  include/FusionCharts/FCF_Area2D.swf,
	  include/FusionCharts/FCF_MSArea2D.swf,
	  include/FusionCharts/FusionCharts.php: Added to repository. Fusion
	  Charts Free.

	* include/functions_fsgraph.php: Added to repository. Fusion Charts
	  chart generation functions for Pandora FMS.
	
	* include/pchart_graph.php, include/pandora_graph.php,